<resources>
    <string name="app_name">My Flight</string>
    <string name="tittle_activity_referencia">ReferenciaActivity</string>
    <string name="tittle_activity_create_account">CreateAccountActivity</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">Already registered? </string>
    <string name="create_here">Create account</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="text_button_register">Register</string>
    <string name="toolbar_tittle_create_account">Create account</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_error">something happens</string>
    <string name="menu_signout">Sign Out</string>
    <string name="toolbar_tittle_home">Home</string>
    <string name="title_activity_plane">PlaneActivity</string>
    <string name="flight_number">Flight Number</string>
    <string name="type_flight">Type:</string>
    <string name="city_tittle_origin">City</string>
    <string name="airport_tittle_origin">Airport</string>
    <string name="DepartureTittle">Departure</string>
    <string name="ArrivalTittle">Arrival</string>
    <string name="speed_tittle">Speed Mph</string>
    <string name="altitudTittle">Altitude ft</string>
    <string name="latitudeTittle">Latitude</string>
    <string name="longitudeTittle">Longitude</string>
    <string name="toolbar_tittle_flight_information">Flight Information</string>

</resources>
